--- a/contact.css
+++ b/contact.css
@@ -400,6 +400,7 @@ display: flex;
 	border-radius: 50%;
 	color: #f4f4f4;
 	transition: all 0.5s ease;
+  overflow: hidden;
 }
 .footer-col .social-links a:hover{
 	color: #24262b;
